# beetfs

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
beetsplug/: beetFs.py  beetfs.py
