[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "beets-beetfs"
version = "0.9.1"
authors = [
  { name="Drew Abbott", email="abbotta4@gmail.com" },
]
description = "A beets plugin for mounting a FUSE filesystem of audio items"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/abbotta4/beetfs"
Issues = "https://github.com/abbotta4/beetfs/issues"

[tool.setuptools.packages.find]
# All the following settings are optional:
include = ["beetsplug"]
namespaces = false  # true by default
